--- a/frontend/messages.html
+++ b/frontend/messages.html
@@ -84,7 +84,7 @@
           <span>Messages</span>
         </a>
       </li>
-      <li><a href="/">
+      <li><a href="/notifications.html">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round"
