Enhances profile UI and avatar functionality
Updates profile styling with improved layout and responsiveness, including a larger post container and minimum height for sections. Enhances avatar rendering with rounded borders and dynamic user avatar loading. Refactors user data handling for clarity and functionality.

Fixes visual inconsistencies and prepares for better user data integration.

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -116,7 +116,7 @@
       <div class="user-avatar">
         <!-- user image: to be finished -->
       </div>
-      <div class="user-name">Username</div>
+      <div class="user-name"></div>
       <div class="user-stats">
         <span><strong id="posts-count">0</strong> Posts</span>
         <span><strong id="followers-count">0</strong> Followers</span>
