--- a/frontend/notification.html
+++ b/frontend/notification.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <nav class="menu">
+    <nav class="menu show">
         <div class="menu-trigger-area"></div>
         <ul class="menu-content">
             <li><a href="/">
