Change button to link for notifications

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -139,7 +139,7 @@
         </ul>
     </nav>
 
-    <button id="btn-message" class="button-message">
+    <a id="btn-message" class="button-message" href="/notification.html">
         <div class="content-avatar">
             <div class="status-user"></div>
             <div class="avatar">
@@ -155,7 +155,7 @@
             <div class="label-message">Message<span class="number-message">3</span></div>
             <div class="user-id">@_theadityasharmaa</div>
         </div>
-    </button>
+    </a>
 
     <div class="slogan-container" style="display: none;">
         <span class="static-text">Social Media Platform With Integrated E-commerce Useful For</span>
