Cutomized the More Page

--- a/frontend/more.html
+++ b/frontend/more.html
@@ -112,10 +112,10 @@
 
     <!-- LINKS CONTAINER -->
     <div class="links-container show">
-        <div class="glass-card" style="--r: -10;" data-text="Link 1"></div>
-        <div class="glass-card" style="--r: 5;" data-text="Link 2"></div>
-        <div class="glass-card" style="--r: -5;" data-text="Link 3"></div>
-        <div class="glass-card" style="--r: 10;" data-text="Link 4"></div>
+        <div class="glass-card" style="--r: -10;" data-text="Contributors"></div>
+        <div class="glass-card" style="--r: 5;" data-text="Legal"></div>
+        <div class="glass-card" style="--r: -5;" data-text="Links"></div>
+        <div class="glass-card" style="--r: 10;" data-text="Resources"></div>
     </div>
 
 </body>
