--- a/frontend/more.html
+++ b/frontend/more.html
@@ -13,12 +13,10 @@
 </head>
 
 <body>
-
-
     <nav class="menu show">
         <div class="menu-trigger-area"></div>
         <ul class="menu-content">
-            <li><a href="/">
+            <li><a href="/"
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -110,14 +108,122 @@
         </ul>
     </nav>
 
-    <!-- LINKS CONTAINER -->
-    <div class="links-container show">
-        <div class="glass-card" style="--r: -10;" data-text="Contributors"></div>
-        <div class="glass-card" style="--r: 5;" data-text="Legal"></div>
-        <div class="glass-card" style="--r: -5;" data-text="Links"></div>
-        <div class="glass-card" style="--r: 10;" data-text="Resources"></div>
+    <!-- Team and Tech Stack Section -->
+    <div class="tech-container">
+        <div class="team-section">
+            <h2>Our Team</h2>
+            <div class="team-grid">
+                <div class="team-member" data-name="Aditya Sharma">
+                    <div class="team-member-content">
+                        <h3>Full Stack Developer</h3>
+                        <p>Lead Developer</p>
+                        <p>Frontend & Backend Expert</p>
+                    </div>
+                </div>
+                <div class="team-member" data-name="Merrick Cai">
+                    <div class="team-member-content">
+                        <h3>Frontend Specialist</h3>
+                        <p>UI/UX Designer</p>
+                        <p>React & JavaScript Expert</p>
+                    </div>
+                </div>
+                <div class="team-member" data-name="Sam Maulvery">
+                    <div class="team-member-content">
+                        <h3>Backend Developer</h3>
+                        <p>API Architecture</p>
+                        <p>Database Expert</p>
+                    </div>
+                </div>
+                <div class="team-member" data-name="Viraj Patel">
+                    <div class="team-member-content">
+                        <h3>Full Stack Developer</h3>
+                        <p>System Architecture</p>
+                        <p>DevOps Specialist</p>
+                    </div>
+                </div>
+                <div class="team-member" data-name="Haotrain Zhang">
+                    <div class="team-member-content">
+                        <h3>UI/UX Designer</h3>
+                        <p>Visual Design</p>
+                        <p>User Experience Expert</p>
+                    </div>
+                </div>
+                <div class="team-member" data-name="Aryan Jain">
+                    <div class="team-member-content">
+                        <h3>Database Engineer</h3>
+                        <p>Data Architecture</p>
+                        <p>Performance Optimization</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="tech-stack">
+            <h2>Tech Stack</h2>
+            <div class="stack-details">
+                <div class="stack-item">
+                    <h3>Frontend</h3>
+                    <p>Vanilla HTML/CSS/JS with ES Modules (MPA)</p>
+                </div>
+                <div class="stack-item">
+                    <h3>Backend</h3>
+                    <p>Node.js + Supabase with REST API</p>
+                </div>
+                <div class="stack-item">
+                    <h3>Database</h3>
+                    <p>Supabase (PostgreSQL + Auth + Storage)</p>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <!-- LINKS CONTAINER -->
+    <div class="links-container show">
+        <div class="glass-card" style="--r: -10;" data-text="Contributors">
+            <div class="card-content">
+                <h3>Contributors</h3>
+                <ul>
+                    <li>Team Members</li>
+                    <li>Join Us</li>
+                    <li>Support</li>
+                    <li>Donate</li>
+                </ul>
+            </div>
+        </div>
+        <div class="glass-card" style="--r: 5;" data-text="Legal">
+            <div class="card-content">
+                <h3>Legal</h3>
+                <ul>
+                    <li>Refund Policy</li>
+                    <li>Terms of Service</li>
+                    <li>Privacy Policy</li>
+                    <li>Cancellation Policy</li>
+                </ul>
+            </div>
+        </div>
+        <div class="glass-card" style="--r: -5;" data-text="Links">
+            <div class="card-content">
+                <h3>Links</h3>
+                <ul>
+                    <li>Help Center</li>
+                    <li>Get Started</li>
+                    <li>Log in to AURA</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+        </div>
+        <div class="glass-card" style="--r: 10;" data-text="Resources">
+            <div class="card-content">
+                <h3>Resources</h3>
+                <ul>
+                    <li>Documentation</li>
+                    <li>API Reference</li>
+                    <li>Status Page</li>
+                    <li>Blog</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
