--- a/frontend/more.html
+++ b/frontend/more.html
@@ -113,65 +113,53 @@
         <div class="team-section">
             <h2>Our Team</h2>
             <div class="team-grid">
-                <div class="team-member" data-name="Aditya Sharma">
-                    <div class="team-member-content">
-                        <h3>Full Stack Developer</h3>
-                        <p>Lead Developer</p>
-                        <p>Frontend & Backend Expert</p>
+                <div class="team-member">
+                    <div class="member-name">Aditya Sharma</div>
+                    <div class="member-hover">
+                        <p>Full Stack Developer</p>
+                        <p>System Architecture</p>
+                        <p>DevOps</p>
                     </div>
                 </div>
-                <div class="team-member" data-name="Merrick Cai">
-                    <div class="team-member-content">
-                        <h3>Frontend Specialist</h3>
-                        <p>UI/UX Designer</p>
-                        <p>React & JavaScript Expert</p>
+                <div class="team-member">
+                    <div class="member-name">Merrick Cai</div>
+                    <div class="member-hover">
+                        <p>Frontend Specialist</p>
+                        <p>UI/UX Design</p>
+                        <p>React Expert</p>
                     </div>
                 </div>
-                <div class="team-member" data-name="Sam Maulvery">
-                    <div class="team-member-content">
-                        <h3>Backend Developer</h3>
+                <div class="team-member">
+                    <div class="member-name">Samuel Mulvey</div>
+                    <div class="member-hover">
+                        <p>Backend Developer</p>
                         <p>API Architecture</p>
                         <p>Database Expert</p>
                     </div>
                 </div>
-                <div class="team-member" data-name="Viraj Patel">
-                    <div class="team-member-content">
-                        <h3>Full Stack Developer</h3>
+                <div class="team-member">
+                    <div class="member-name">Viraj Patel</div>
+                    <div class="member-hover">
+                        <p>Full Stack Developer</p>
                         <p>System Architecture</p>
                         <p>DevOps Specialist</p>
                     </div>
                 </div>
-                <div class="team-member" data-name="Haotrain Zhang">
-                    <div class="team-member-content">
-                        <h3>UI/UX Designer</h3>
+                <div class="team-member">
+                    <div class="member-name">Haotian Zhang</div>
+                    <div class="member-hover">
+                        <p>UI/UX Designer</p>
                         <p>Visual Design</p>
                         <p>User Experience Expert</p>
                     </div>
                 </div>
-                <div class="team-member" data-name="Aryan Jain">
-                    <div class="team-member-content">
-                        <h3>Database Engineer</h3>
+                <div class="team-member">
+                    <div class="member-name">Aryan Jain</div>
+                    <div class="member-hover">
+                        <p>Database Engineer</p>
                         <p>Data Architecture</p>
-                        <p>Performance Optimization</p>
+                        <p>Performance Expert</p>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="tech-stack">
-            <h2>Tech Stack</h2>
-            <div class="stack-details">
-                <div class="stack-item">
-                    <h3>Frontend</h3>
-                    <p>Vanilla HTML/CSS/JS with ES Modules (MPA)</p>
-                </div>
-                <div class="stack-item">
-                    <h3>Backend</h3>
-                    <p>Node.js + Supabase with REST API</p>
-                </div>
-                <div class="stack-item">
-                    <h3>Database</h3>
-                    <p>Supabase (PostgreSQL + Auth + Storage)</p>
                 </div>
             </div>
         </div>
@@ -181,7 +169,6 @@
     <div class="links-container show">
         <div class="glass-card" style="--r: -10;" data-text="Contributors">
             <div class="card-content">
-                <h3>Contributors</h3>
                 <ul>
                     <li>Team Members</li>
                     <li>Join Us</li>
@@ -192,7 +179,6 @@
         </div>
         <div class="glass-card" style="--r: 5;" data-text="Legal">
             <div class="card-content">
-                <h3>Legal</h3>
                 <ul>
                     <li>Refund Policy</li>
                     <li>Terms of Service</li>
@@ -203,7 +189,6 @@
         </div>
         <div class="glass-card" style="--r: -5;" data-text="Links">
             <div class="card-content">
-                <h3>Links</h3>
                 <ul>
                     <li>Help Center</li>
                     <li>Get Started</li>
@@ -214,7 +199,6 @@
         </div>
         <div class="glass-card" style="--r: 10;" data-text="Resources">
             <div class="card-content">
-                <h3>Resources</h3>
                 <ul>
                     <li>Documentation</li>
                     <li>API Reference</li>
