Final modifications to more.css and more.html file  - file out of reach from anyone except owner

--- a/frontend/more.html
+++ b/frontend/more.html
@@ -119,6 +119,8 @@
                         <p>Full Stack Developer</p>
                         <p>System Architecture</p>
                         <p>DevOps</p>
+                        <p>Backend/Frontend Deployment</p>
+                        <p>Github Master - PR Approver</p>
                     </div>
                 </div>
                 <div class="team-member">
@@ -126,7 +128,7 @@
                     <div class="member-hover">
                         <p>Frontend Specialist</p>
                         <p>UI/UX Design</p>
-                        <p>React Expert</p>
+                        <p>System Expert</p>
                     </div>
                 </div>
                 <div class="team-member">
@@ -140,9 +142,7 @@
                 <div class="team-member">
                     <div class="member-name">Viraj Patel</div>
                     <div class="member-hover">
-                        <p>Full Stack Developer</p>
-                        <p>System Architecture</p>
-                        <p>DevOps Specialist</p>
+                        <p>Frontend Devloper</p>
                     </div>
                 </div>
                 <div class="team-member">
@@ -150,15 +150,13 @@
                     <div class="member-hover">
                         <p>UI/UX Designer</p>
                         <p>Visual Design</p>
-                        <p>User Experience Expert</p>
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="member-name">Aryan Jain</div>
                     <div class="member-hover">
-                        <p>Database Engineer</p>
-                        <p>Data Architecture</p>
-                        <p>Performance Expert</p>
+                        <p>Backend Developer</p>
+                        <p>Frontend Developer</p>
                     </div>
                 </div>
             </div>
