forgot - no commit

--- a/frontend/more.html
+++ b/frontend/more.html
@@ -129,6 +129,7 @@
                         <p>Frontend Specialist</p>
                         <p>UI/UX Design</p>
                         <p>System Expert</p>
+                        <p>Github Master - Commits</p>
                     </div>
                 </div>
                 <div class="team-member">
