Minor Changes in Font and Style for index.html and index.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,7 +158,7 @@
     </a>
 
     <div class="slogan-container" style="display: none;">
-        <span class="static-text">Social Media Platform With Integrated E-commerce Useful For</span>
+        <span class="static-text">Social Media Platform With Integrated E-Commerce Useful For</span>
         <div class="dynamic-text-wrapper">
             <span class="dynamic-text"></span>
         </div>
