--- a/frontend/notification.html
+++ b/frontend/notification.html
@@ -123,8 +123,8 @@
                 <div class="notificationHeader">
                     <h1>Notifications</h1>
                     <span id="num-of-notif"></span>
+                    <div class="mark-as-read-container"><p id="mark-as-read">Mark as All Read</p></div>
                 </div>
-                <p id="mark-as-read">Mark as All Read</p>
             </header>
             <main>
                 <div class="notificationCard unread">
