--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -25,6 +25,17 @@
                 <span class="material-symbols-outlined">shopping_cart</span>
                 <span class="cart-count">0</span>
             </div>
+            <div id="cart-panel" class="cart-panel hidden">
+                <div class="cart-header">
+                    <h2>Your Cart</h2>
+                    <button id="close-cart">&times;</button>
+                </div>
+                <div id="cart-items">
+                </div>
+                <div class="cart-footer">
+                    <p>Total: $<span id="cart-total">0.00</span></p>
+                </div>
+            </div>
         </div>
         <div class="shop-content">
             <div class="products-grid">
@@ -34,6 +45,7 @@
             </div>
         </div>
     </div>
+
 
     <nav class="menu show">
         <div class="menu-trigger-area"></div>
