Enhances post creation and UI consistency
Adds support for creating new posts with text and images
Improves upload widget styling for better alignment and usability
Introduces visual feedback for disabled post button state
Refactors JavaScript for improved organization and functionality.

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -130,9 +130,10 @@
       <!-- Upload posts -->
       <section class="upload-widget">
         <div class="upload-title">New Post</div>
+        <textarea class="post-text-input" placeholder="What's on your mind?"></textarea>
         <div class="upload-controls">
           <input type="file" class="upload-input" accept="image/*" />
-          <button class="upload-submit">Upload</button>
+          <button class="upload-submit">Post</button>
         </div>
       </section>
 
